[package]
name = "blinmaker"
version = "2.1.0"
authors = ["ilchub, drag0nhaze"]
edition = "2018"
license = "GNU GPLv3"
description = "A Rust-based library for calculating how many blins(penkakes) you can make from certain amount of materials"
repository = "https://github.com/ilchub/blinmaker2.git"
readme = "README.md"
documentation = "https://github.com/ilchub/blinmaker2/blob/master/README.md"

[dependencies]
